# qc

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
bak/matrix/: matrix.cpp
cmake/: find_graph.cmake  find_json11.cmake  graph.cmake  json11.cmake  qc_external_projects.cmake
include/: clique-and-vertex-color.hpp  ddmf.hpp
include/clique-and-vertex-color/: Graph.h
include/sprout/: type_traits.hpp
include/sprout/type_traits/: is_signed.hpp
library_bak/: i.hpp  s.hpp  x.hpp
library_bak/hadamard/: hadamard_impl.hpp
library_bak/swap/: swap_impl.hpp
library_bak/x/: x_private.hpp
library_bak/z/: z.cpp  z_impl.hpp
sample/: .gitignore  CMakeLists.txt  readme.md
sample/circuit_data/: .gitignore  alu4.esop
sample/cmake/: external_projects.cmake  find_graph.cmake  find_json11.cmake  find_qc.cmake  graph.cmake
sample/src/: main.cpp
src/: algorithm.hpp  bit.hpp  circuit.cpp  circuit.hpp  debug.hpp  forward_declarations.hpp  gate.cpp  gate.hpp  io.hpp  layout.hpp  qc.hpp  step.cpp  step.hpp  util.cpp  util.hpp
src/algorithm/: general.hpp  group.hpp  oracle.hpp  parallel.hpp  tqc.hpp
src/algorithm/general/: general.cpp  general_impl.hpp  general_private.hpp
src/algorithm/group/: group.cpp
src/algorithm/oracle/: oracle.cpp  oracle_impl.hpp
src/algorithm/parallel/: engines.hpp  gate_dependency.hpp  parallel.cpp  parallel_impl.hpp  predicates.hpp
src/algorithm/parallel/engines/: csvd_base.hpp  csvd_ev1.hpp  csvd_ev_base.hpp
src/algorithm/parallel/engines/csvd_base/: csvd_base_impl.hpp
src/algorithm/parallel/engines/csvd_ev1/: csvd_ev1_impl.hpp
src/algorithm/parallel/engines/csvd_ev_base/: csvd_ev_base_impl.hpp
src/algorithm/parallel/gate_dependency/: gate_dependency_impl.hpp
src/algorithm/parallel/predicates/: predicates_impl.hpp
src/algorithm/tqc/: layout.hpp  parallel.hpp  tqc.cpp  tqc_impl.hpp
src/algorithm/tqc/parallel/: csvd_base.hpp  csvd_ev1.hpp  csvd_ev_base.hpp  gate_dependency.hpp  parallel_impl.hpp
src/algorithm/tqc/parallel/csvd_base/: csvd_base_impl.hpp
src/bit/: bit.cpp  bit_impl.hpp  hash.hpp
src/bit/bits_wrapper/: bits_wrapper_kernel.hpp  bits_wrapper_shell.hpp
src/bit/bits_wrapper/bits_wrapper_kernel/: bits_wrapper_kernel_impl.hpp
src/bit/bits_wrapper/bits_wrapper_shell/: bits_wrapper_shell.cpp  bits_wrapper_shell_impl.hpp
src/bit/hash/: hash.cpp  hash_impl.hpp
src/circuit/: circuit.cpp  circuit_impl.hpp
src/debug/: assert.hpp  debug.cpp  debug_impl.hpp  error.hpp  issue.hpp  warn.hpp
src/debug/error/: error.cpp  error_impl.hpp
src/debug/warn/: warn.cpp  warn_impl.hpp
src/gate/: bedaggered.hpp  dagger.hpp  gate.cpp  gate_core.hpp  gate_impl.hpp  gate_kernel.hpp  gate_type.hpp  gates_wrapper.hpp  group.hpp  impl.hpp  library.hpp  unit.hpp
src/gate/bedaggered/: bedaggered.cpp
src/gate/dagger/: dagger.cpp
src/gate/gate_core/: gate_core.cpp  gate_core_impl.hpp
src/gate/gate_kernel/: gate_kernel.cpp  gate_kernel_impl.hpp  group_kernel.hpp  unit_kernel.hpp
src/gate/gate_kernel/group_kernel/: group_kernel.cpp  group_kernel_impl.hpp
src/gate/gate_kernel/unit_kernel/: unit_kernel.cpp  unit_kernel_impl.hpp
src/gate/gate_type/: gate_type_impl.hpp
src/gate/gates_wrapper/: gate_wrapper.cpp  gates_wrapper_core.hpp  gates_wrapper_impl.hpp  gates_wrapper_kernel.hpp  gates_wrapper_shell.hpp
src/gate/gates_wrapper/gates_wrapper_core/: gates_wrapper_core_impl.hpp
src/gate/gates_wrapper/gates_wrapper_kernel/: gates_wrapper_kernel_impl.hpp
src/gate/gates_wrapper/gates_wrapper_shell/: gates_wrapper_shell.cpp  gates_wrapper_shell_impl.hpp
src/gate/group/: group.cpp  group_impl.hpp
src/gate/impl/: impl.cpp  impl_impl.hpp
src/gate/unit/: unit_impl.hpp
src/io/: blif.hpp  esop.hpp  io.cpp  io_impl.hpp  io_private.hpp  issue.hpp  json.hpp  qo.hpp  warn.hpp
src/io/blif/: blif.cpp  blif_impl.hpp  dumper.hpp  parser.hpp
src/io/blif/dumper/: dumper.cpp  dumper_impl.hpp
src/io/blif/parser/: parser.cpp  parser_impl.hpp
src/io/esop/: esop.cpp  esop_impl.hpp
src/io/exc/: illegal_format_exception.hpp
src/io/exc/illegal_format_exception/: illegal_format_exception_impl.hpp
src/io/issue/: issue.cpp
src/io/json/: dumper.hpp  json.cpp  json_impl.hpp  parser.hpp
src/io/json/dumper/: dumper.cpp  dumper_impl.hpp
src/io/json/parser/: parser.cpp  parser_impl.hpp
src/io/qo/: qo.cpp  qo_impl.hpp
src/io/warn/: warn.cpp  warn_impl.hpp
src/layout/: layout_impl.hpp
src/qc/: .#circuit.cpp  bit.cpp  bit.hpp  bit_impl.hpp  circuit.cpp  circuit.hpp  file_manager.cpp  file_manager.hpp  gate.cpp  gate.hpp  gate_impl.hpp  step.cpp
src/qc/io/: esop.cpp  esop.hpp  io.cpp  io.hpp  io_impl.hpp  io_private.hpp  qo.cpp  qo.hpp
src/qc/io/exc/: illegal_format_exception.hpp  illegal_format_exception_impl.hpp
src/qc2/: bit.cpp  circuit.cpp  circuit.hpp  gate.cpp  step.hpp
src/util/: container.cpp  container.hpp  container_helper.cpp  container_helper.hpp  container_impl.hpp  eigen.cpp  eigen.hpp  math.hpp  matrix.cpp  matrix.hpp  matrix_impl.hpp  polymorphism_list.hpp  set.hpp  string.cpp  string.hpp  string_helper.cpp  string_helper.hpp  tmpl.hpp  vector.hpp
src/util/container/: container.cpp  container_impl.hpp  polymorphism_list.hpp
src/util/math/: math_impl.hpp
src/util/matrix/: matrix_impl.hpp
src/util/set/: set_impl.hpp
src/util/string/: aliases.hpp  basic_string.hpp  istring.hpp  multi_value.hpp  string.cpp  string_impl.hpp
src/util/string/basic_string/: basic_string_impl.hpp
src/util/string/istring/: hash.hpp  istring_impl.hpp
src/util/string/multi_value/: multi_value_impl.hpp
src/util/tmpl/: tmpl_impl.hpp
src/util/vector/: point.hpp  vector_impl.hpp
src/util/vector/point/: point_impl.hpp
test/: CMakeLists.txt  gtest.cmake
test/algorithm/: CMakeLists.txt
test/algorithm/general/: CMakeLists.txt  decomp_to_single_target_gates_test.cpp
test/algorithm/oracle/: CMakeLists.txt  is_mct_circuit_test.cpp
test/gate/: CMakeLists.txt  gate_test.cpp  group_test.cpp  library_test.cpp  longest_subseq_solver_test.cpp  main.cpp  u_test.cpp  v_test.cpp  x_test.cpp
(+4 files in other folders)
